getting functional i think

--- a/client/views/partials/shop/productlist.jade
+++ b/client/views/partials/shop/productlist.jade
@@ -1,26 +1,47 @@
-article.post.simpleCart_shelfItem
+//article.post.simpleCart_shelfItem
 
-    h2.item_name Parable of the Fireman
+    //h2.item_name ParableoftheFireman
         //a(href="shop/products/{{product._id}}") {{product.productName}}
     //img(src="/images/parable.png")
 
-    h4.price.item_price 0.10 &euro;
+    //h4.price.item_price 0.10 &euro;
 
-    div.description
-        My First book
+    //div.description
+        //My First book
 
-    a.item_add(href="javascript:;") Add to Cart
+    //select.item_size
+        //option(value="downloadurl") downloadurl
+
+    //a.item_add(href="javascript:;") Add to Cart
 
 //(ng-repeat="product in products")
 article.post.simpleCart_shelfItem
 
-    h2.item_name A- Z of Graffiti
+    h2.item_name ABZ of Graffiti
         //a(href="shop/products/{{product._id}}") {{product.productName}}
     //img(src="/images/parable.png")
 
     h4.price.item_price 0.10 &euro;
 
     div.description
-        My First book
+        p a little book about writing on walls
+
+    a.item_add(href="javascript:;") Add to Cart
+
+article.post.simpleCart_shelfItem
+
+    h2.item_name This Website
+        //a(href="shop/products/{{product._id}}") {{product.productName}}
+    //img(src="/images/parable.png")
+
+    h4.price.item_price 1000 &euro;
+
+    div.description
+        You will recieve 
+        ul
+            li the private bitbucket repository
+            li the modulus.io hosting account
+            li full installation instructions
+            li help with customisation
 
     a.item_add(href="javascript:;") Add to Cart
