--- a/client/views/partials/shop/sidebar.jade
+++ b/client/views/partials/shop/sidebar.jade
@@ -1,10 +1,11 @@
 article.post
-    h3 CHECKOUT
+    h3 concurrencies a bitch
 
     span.simpleCart_items
     hr
     span.simpleCart_quantity
     hr
+    span.simpleCart_something something
     h5 Total &euro;
         span.simpleCart_total
 
