--- a/client/views/partials/shop/thanks.jade
+++ b/client/views/partials/shop/thanks.jade
@@ -1,5 +1,5 @@
 h1 Thank you for your purchase {{cookies}}
 
 #lastVal {{lastVal}}
-button(ng-click="bump()") Bump!
+//button(ng-click="bump()") Bump!
 {{cook}}
