--- a/client/views/partials/shop/downloads.jade
+++ b/client/views/partials/shop/downloads.jade
@@ -1,1 +1,6 @@
-h3 you can download {{cook}} {{books}}
+h3 you can download 
+ul
+    li(ng-repeat="coo in cook")
+        a(href="/api/downloads/{{coo}}.pdf") {{coo}}
+ 
+is money the language of authenticity
