--- a/client/views/partials/shop/downloads.jade
+++ b/client/views/partials/shop/downloads.jade
@@ -1,6 +1,6 @@
 h3 you can download 
 ul
     li(ng-repeat="coo in cook")
-        a(href="/api/downloads/{{coo}}.pdf") {{coo}}
+        a(href="/api/downloads/{{coo}}.pdf" target="blank") {{coo}}
  
-is money the language of authenticity
+    
