--- a/client/views/partials/shop/productlist.jade
+++ b/client/views/partials/shop/productlist.jade
@@ -17,31 +17,53 @@
 //(ng-repeat="product in products")
 article.post.simpleCart_shelfItem
 
-    h2.item_name ABZ of Graffiti
+    h2.item_name aptitude-is-abundance.pdf
         //a(href="shop/products/{{product._id}}") {{product.productName}}
     //img(src="/images/parable.png")
 
-    h4.price.item_price 0.10 &euro;
+    h4.price.item_price 10 GBP;
 
     div.description
-        p a little book about writing on walls
+        p A little book about writing on walls
 
     a.item_add(href="javascript:;") Add to Cart
 
+
 article.post.simpleCart_shelfItem
 
-    h2.item_name This Website
+    h2.item_name this-website.txt
         //a(href="shop/products/{{product._id}}") {{product.productName}}
     //img(src="/images/parable.png")
 
     h4.price.item_price 1000 &euro;
 
     div.description
-        You will recieve 
+        p You will recieve 
         ul
             li the private bitbucket repository
             li the modulus.io hosting account
             li full installation instructions
             li help with customisation
+
+    a.item_add(href="javascript:;") Add to Cart
+
+article.post.simpleCart_shelfItem
+
+    h2.item_name That Website
+        //a(href="shop/products/{{product._id}}") {{product.productName}}
+    //img(src="/images/parable.png")
+
+    h4.price.item_price 4300 GBP;
+
+    div.description
+        p You will recieve everything above..
+        ul
+            li the private bitbucket repository
+            li the modulus.io hosting account
+            li full installation instructions
+            li help with customisation
+
+        p plus - 
+        p An application tailored to the needs of your product and users
 
     a.item_add(href="javascript:;") Add to Cart
