--- a/client/views/partials/shop/productlist.jade
+++ b/client/views/partials/shop/productlist.jade
@@ -17,11 +17,25 @@
 //(ng-repeat="product in products")
 article.post.simpleCart_shelfItem
 
+    h2.item_name little-book-of-scribbles.pdf
+        //a(href="shop/products/{{product._id}}") {{product.productName}}
+    //img(src="/images/parable.png")
+
+    h4.price.item_price .57 GBP;
+
+    div.description
+        p A little book about writing on walls
+
+    a.item_add(href="javascript:;") Add to Cart
+
+
+article.post.simpleCart_shelfItem
+
     h2.item_name aptitude-is-abundance.pdf
         //a(href="shop/products/{{product._id}}") {{product.productName}}
     //img(src="/images/parable.png")
 
-    h4.price.item_price 10 GBP;
+    h4.price.item_price 5 GBP;
 
     div.description
         p A little book about writing on walls
