--- a/client/views/partials/header/header.jade
+++ b/client/views/partials/header/header.jade
@@ -8,8 +8,8 @@
                     a(href='/blog/posts') Blog
                 li(active-nav)
                     a(href='/shop/products') Book Shop
-                //li(data-access-level='accessLevels.anon', active-nav)
-                    //a(href='/about') About
+                li(data-access-level='accessLevels.anon', active-nav)
+                    a(href='/listing') Listings
                 li(active-nav)
                     a(href='/contact') Contact
                 //li(data-access-level='accessLevels.anon', active-nav)
