--- a/client/views/partials/footer/footer.jade
+++ b/client/views/partials/footer/footer.jade
@@ -32,8 +32,8 @@
             form.form-horizontal(ng-submit="login()", name="loginForm", role="form")
                 .form-group
                     h3 Your Bullshit Here
-                    input.form(type="text", data-ng-model="username", placeholder="Username", name="username", required, autofocus)
-                    input.form(type="password", data-ng-model="password", placeholder="Password", name="password", required)
+                    //input.form(type="text", data-ng-model="username", placeholder="Username", name="username", required, autofocus)
+                    //input.form(type="password", data-ng-model="password", placeholder="Password", name="password", required)
                     //.checkbox
                         //label(for="rememberme").checkbox
                             //input(type="checkbox", data-ng-model="rememberme", name="rememberme")
