--- a/client/views/partials/listing/layout.jade
+++ b/client/views/partials/listing/layout.jade
@@ -1,8 +1,11 @@
 h1 layout
 
 .row
-    .col-md-6
-        h1 left
-    .col-md-6
-        p {{debug}}
+    .col-md-3
+        .listing
+            ul.sidebar
+                li(ng-repeat="listing in listings")
+                    a(href="/listing/{{listing._id}}") {{listing.name}}
+    .col-md-9
         .listing(ui-view="right" autoscroll="false")        
+            h1 Welcome to the listings page
