further scoping of controllers

--- a/client/index.jade
+++ b/client/index.jade
@@ -99,6 +99,7 @@ html(lang='en', data-ng-app='eshoprShop')
 
         // Listing Plugin
         script(src="/js/listing/listingController.js")
+        script(src="/js/listing/uiController.js")
         //script(src="/js/listing/listingModel.js")
         script(src="/components/simpleWeather/jquery.simpleWeather.js")
         script(src="/js/listing/libs/sortable.js")
