--- a/client/views/partials/header/header.jade
+++ b/client/views/partials/header/header.jade
@@ -9,7 +9,7 @@
                 li(active-nav)
                     a(href='/shop/products') Book Shop
                 li(data-access-level='accessLevels.anon', active-nav)
-                    a(href='/listing') Listings
+                    a(href='/listings/') Listings
                 li(active-nav)
                     a(href='/contact') Contact
                 //li(data-access-level='accessLevels.anon', active-nav)
@@ -20,6 +20,8 @@
                     a(href='/admin') Admin
                 li(data-access-level='accessLevels.admin', active-nav)
                     a(href='/admin') Admin
+                li
+                    a(ui-sref="instance-ticket.worklog({ instanceID:1, ticket.testnum:2 })")
 
         .login.right(data-access-level='accessLevels.user' ng-controller="LoginCtrl")
             span.label(data-ng-class='{"label-info": user.role.title == userRoles.user.title, "label-success": user.role.title == userRoles.admin.title}') {{ user.role.title }}
