--- a/client/views/partials/listing/layout.jade
+++ b/client/views/partials/listing/layout.jade
@@ -5,7 +5,7 @@ h1 layout
         .listing
             ul.sidebar
                 li(ng-repeat="listing in listings")
-                    a(href="/listing/{{listing._id}}") {{listing.name}}
+                    a(href="/listings/listing/{{listing._id}}") {{listing.name}}
     .col-md-9
         .listing(ui-view="right" autoscroll="false")        
             h1 Welcome to the listings page
