--- a/client/views/partials/listing/layout.jade
+++ b/client/views/partials/listing/layout.jade
@@ -9,3 +9,4 @@ h1 layout
     .col-md-9
         .listing(ui-view="right" autoscroll="false")        
             h1 Welcome to the listings page
+            a(href="/listings/add") Add
