--- a/client/views/partials/listing/ui.jade
+++ b/client/views/partials/listing/ui.jade
@@ -1,1 +1,12 @@
-h1 ui {{listingID}}
+.row(ng-repeat="list in listing")
+    .col-md-6
+        {{list.location}}
+    
+    .col-md-6
+        h3 {{list.name}}
+        p contact: {{list.email}}
+        p beds available: {{list.bedsavailable}}
+        p beds required {{list.required}}
+.row
+    .col-md-6
+    .col-md-6
