weather directive included on page

--- a/client/index.jade
+++ b/client/index.jade
@@ -102,6 +102,7 @@ html(lang='en', data-ng-app='eshoprShop')
         script(src="/js/listing/uiController.js")
         script(src="/js/listing/addListingController.js")
         script(src="/js/listing/listingModel.js")
+        script(src="/js/listing/weatherDirective.js")
         script(src="/components/simpleWeather/jquery.simpleWeather.js")
         script(src="/js/listing/libs/sortable.js")
         script(src="/js/listing/libs/jquery-ui-1.11.1.custom/jquery-ui.js")
