--- a/client/views/partials/listing/ui.jade
+++ b/client/views/partials/listing/ui.jade
@@ -1,6 +1,7 @@
 .row(ng-repeat="list in listing")
     .col-md-6
         {{list.location}}
+        weather
     
     .col-md-6
         h3 {{list.name}}
